<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:elevation="0dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_notfound"
                    android:scaleType="fitXY"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textStyle="bold"
                    android:text="@string/origem"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textSize="12sp"
                    android:textAllCaps="true"
                    android:textColor="@color/txt_subtitle"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/title"
                    android:textColor="@color/txt_title"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_calendar"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/data"
                        android:textSize="12sp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/txt_content"
                        android:paddingStart="5dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>